Added SQL migrations and attached scripts

--- a/JKTechCodingExercise.API/appsettings.Development.json
+++ b/JKTechCodingExercise.API/appsettings.Development.json
@@ -7,8 +7,11 @@
   },
   "AllowedHosts": "*",
   "Jwt": {
-    "Key": "YourVerySecretKeyHere",
-    "Issuer": "yourdomain.com",
-    "Audience": "yourdomain.com"
+    "Key": "<AddSecretKeyHere>",
+    "Issuer": "<AddDomainHere>",
+    "Audience": "<AddDomainHere>"
+  },
+  "ConnectionStrings": {
+    "BloggingDatabase": "Server=.;Database=JKTechCodingExerciseDB;Trusted_Connection=True;"
   }
 }
